[package]
name = "cleanse"
version = "0.3.0"
edition = "2018"
authors = ["Seth Stadick <sstadick@gmail.com>"]
license = "Unlicense/MIT"
repository = "https://github.com/sstadick/cleanse"
description = "Small utility to clean up delimited (TSV/CSV) data."
documentation = "https://docs.rs/cleanse"
readme = "README.md"
categories = ["text-processing", "command-line-interface"]
keywords = ["text", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2.16"
color-eyre = "0.5.11"
csv = "1.1.6"
structopt = "0.3.22"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
